--- a/app/pages/ui/device-lists/device-lists.registered-devices.filters.html
+++ b/app/pages/ui/device-lists/device-lists.registered-devices.filters.html
@@ -2,8 +2,8 @@
     class="kdte-filters-toolbar"
     ng-init="
         $ctx = $root.kdte;
-        $toggleBlockedByMac = $ctx.toggleFlag('hideHostsBlockedByMac');
-        $toggleOffline = $ctx.toggleFlag('hideOfflineHosts');
+        $toggleBlockedByMac = $ctx.getToggleFlagFn('hideHostsBlockedByMac');
+        $toggleOffline = $ctx.getToggleFlagFn('hideOfflineHosts');
     "
     ng-class="{
         '__hidden': !$ctx.flags.showFilterCheckboxes
