(feat.) allow to display RSSI value next to the signal bars for wireless clients

--- a/app/pages/options.html
+++ b/app/pages/options.html
@@ -57,7 +57,23 @@
         </label>
     </form>
 
-    <br/>
+    <form
+        name="showRssiValue"
+        class="show-rssi-value-form"
+    >
+        <input
+            id="showRssiValue"
+            name="showRssiValue"
+            type="checkbox"
+        />
+
+        <label
+            for="replaceTextareaCursor"
+        >
+            Show RSSI value in Wi-Fi connection data
+        </label>
+    </form>
+
     <br/>
 
     <div class="switchports-template">
