(chore) options: merge two 'checkbox forms' into a single one

--- a/app/pages/options.html
+++ b/app/pages/options.html
@@ -40,38 +40,32 @@
         </div>
     </form>
 
-    <form
-        name="replaceTextareaCursor"
-        class="replace-textarea-cursor-form"
-    >
-        <input
-            id="replaceTextareaCursor"
-            name="replaceTextareaCursor"
-            type="checkbox"
-        />
+    <br/>
 
-        <label
-            for="replaceTextareaCursor"
-        >
-            Replace textarea cursor
-        </label>
-    </form>
+    <form class="checkboxes-form">
+        <div class="checkbox">
+            <input
+                id="replaceTextareaCursor"
+                name="replaceTextareaCursor"
+                type="checkbox"
+            />
 
-    <form
-        name="showRssiValue"
-        class="show-rssi-value-form"
-    >
-        <input
-            id="showRssiValue"
-            name="showRssiValue"
-            type="checkbox"
-        />
+            <label for="replaceTextareaCursor">
+                Replace textarea cursor
+            </label>
+        </div>
 
-        <label
-            for="replaceTextareaCursor"
-        >
-            Show RSSI value in Wi-Fi connection data
-        </label>
+        <div class="checkbox">
+            <input
+                id="showRssiValue"
+                name="showRssiValue"
+                type="checkbox"
+            />
+
+            <label for="replaceTextareaCursor">
+                Show RSSI value in Wi-Fi connection data
+            </label>
+        </div>
     </form>
 
     <br/>
