(fix) fix 'Device lists' page filters for devices with 2.x firmware

--- a/app/pages/ui/device-lists/device-lists.filter-toggle.html
+++ b/app/pages/ui/device-lists/device-lists.filter-toggle.html
@@ -13,6 +13,7 @@
             model="$ctx.flags.showFilterCheckboxes"
             name="toggleDeviceListsFilters"
             on-value-change="$toggleShowFiltersCallback"
+            bs-modifiable="0"
         >
         </ndm-checkbox>
     </div>
