--- a/app/pages/ui/device-lists/device-lists.unregistered-devices.filters.html
+++ b/app/pages/ui/device-lists/device-lists.unregistered-devices.filters.html
@@ -13,6 +13,7 @@
         model="$ctx.flags.hideUnregisteredHosts"
         name="hideUnregisteredHosts"
         on-value-change="$toggleHideUnregistered"
+        bs-modifiable="0"
     >
     </ndm-checkbox>
 </div>
