(chore) pages/ui/reboot-schedule: hide thumbnail of the selected schedule, lock selectbox on save

--- a/app/pages/ui/reboot-schedule/reboot-schedule.html
+++ b/app/pages/ui/reboot-schedule/reboot-schedule.html
@@ -5,14 +5,14 @@
     <!-- `vm` is a reference to the RebootController -->
 
     <br/>
-    <br/>
 
     <ndm-schedule-select
-        is-disabled="vm.isLocked"
+        is-disabled="vm.isLocked || system.ui.isLocked"
         label="{{vm.l10n.rebootScheduleLabel}}"
         no-schedule-label="{{vm.l10n.rebootScheduleNoScheduleOption}}"
         name="rebootSchedule"
         model="vm.rebootSchedule"
+        no-selected-thumb="true"
     >
     </ndm-schedule-select>
 </div>
