--- a/app/pages/ui/traceroute-via/traceroute-via.html
+++ b/app/pages/ui/traceroute-via/traceroute-via.html
@@ -2,12 +2,13 @@
     class="traceroute-via"
     ng-controller="$root.TracerouteViaController as vm"
 >
-    <ndm-selectbox2
+    <ndm-selectbox
         ng-show="vm.pageController.tools.tool === 'traceroute'"
+        disabled="vm.pageController.tools.isBusy"
         label="{{ vm.l10n.viaInterfaceLabel }}"
         name="viaInterface"
         value="vm.viaInterface"
         options="vm.viaInterfaceOptions"
     >
-    </ndm-selectbox2>
+    </ndm-selectbox>
 </div>
