(feat.) implement 'kvas' settings page skeleton

--- a/app/pages/options.html
+++ b/app/pages/options.html
@@ -66,6 +66,18 @@
                 Show RSSI value in Wi-Fi connection data
             </label>
         </div>
+
+        <div class="checkbox">
+            <input
+                id="addKvasUiPage"
+                name="addKvasUiPage"
+                type="checkbox"
+            />
+
+            <label for="addKvasUiPage">
+                Add <b>kvas</b> UI page
+            </label>
+        </div>
     </form>
 
     <br/>
