(task) implement 'unblock list' UI (in progress)

--- a/app/pages/ui/kvas-ui/kvas-ui.html
+++ b/app/pages/ui/kvas-ui/kvas-ui.html
@@ -95,7 +95,7 @@
                     class="list-item__input"
                     name="unblockListItem{{$index}}"
                     disabled="vm.ui.isLocked"
-                    model="item"
+                    model="vm.unblockList.list[$index]"
                 >
                 </ndm-input>
 
